Added Showtime class together with controller, service and a repository
